--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Anthony",
   "license": "Apache-2.0",
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "chalk": "^4.1.1",
+    "discord.js": "^12.5.3",
+    "moment": "^2.29.1"
   }
 }
