--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chalk": "^4.1.1",
     "discord.js": "^12.5.3",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "mongodb": "^3.6.6"
   }
 }
