--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon .",
+    "start": "pm2 start app.js",
+    "stop": "pm2 stop app.js",
+    "watch": "pm2 monit"
   },
   "author": "Anthony",
   "license": "Apache-2.0",
