--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Anthony",
   "license": "Apache-2.0",
   "dependencies": {
+    "axios": "^0.21.1",
     "axois": "^0.0.1-security",
     "chalk": "^4.1.1",
     "discord.js": "github:discordjs/discord.js",
