--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^0.21.1",
     "axois": "^0.0.1-security",
     "chalk": "^4.1.1",
-    "discord.js": "github:discordjs/discord.js",
+    "discord.js": "^13.0.0",
     "moment": "^2.29.1",
     "mongodb": "^3.6.9"
   }
